# sentientcore

./: FRONTEND_BUILD.md  agent_execution_results.json  memory_management.db  real_functionality_results.json  real_system_test_results.json  requirements.txt  state_management.db  system_test_results.json  test_build3.py  test_payload.json  working_agent_results.json
app/: memory_management.db  (+1 more)
sentient-core/: .env  .env.example  .gitignore  API_KEY_ISSUE_RESOLUTION.md  ARCHITECTURE.md  BUILD2_IMPLEMENTATION_GUIDE.md  CONTEXTUAL_CONVERSATION_ANALYSIS.md  DOCKER.md  DOCKER_SETUP_GUIDE.md  Dockerfile  Dockerfile.alt  Dockerfile.minimal  Dockerfile.optimized  IMPLEMENTATION_STATE_TRACKER.md  INTELLIGENT_ORCHESTRATOR_SUMMARY.md  MIGRATION.md  ORCHESTRATOR_FIX_SUMMARY.md  SERVER_SETUP_GUIDE.md  STARTUP_GUIDE.md  TASKS.md  TESTING_GUIDE.md  agent_execution_results.json  asyncio_test.py  basic_http_test.py  basic_socket_test.py  basic_test.py  build3_test.py  check_research_files.py  comprehensive_test_build_1_and_2.py  connection_test.py  crash_investigation.py  debug_app.py  debug_app_minimal.py  debug_conversation_history.py  debug_endpoint.py  debug_fastapi_memory_service.py  debug_init.py  debug_logs_inspection.py  debug_main_app_flow.py  debug_memory_class.py  (+145 more)
sentient-core/analysis/: current_system_analysis.md
sentient-core/app/: main.py  memory_management.db  state_management.db
sentient-core/core/: config.py  enhanced_models.py  models.py  monitoring_agent.py  ultra_orchestrator.py
sentient-core/docs/: advanced_state_management.md  build1_integration_analysis.md  (+6 more)
(+384 files in other folders)
